oxiplate/tests/crates/template-dir-symlink/tests/broken/broken.stderr
error: Template directory `$DIR/templates-symlink` cannot be a symlink.
 --> tests/broken/broken.rs:4:1
  |
4 | #[oxiplate = "external.html.oxip"]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
